# IDE

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
src/: Main.cpp
